--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INR Travels</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-container">
+                <img src="/images/Group 40071 (2).png" alt="">
+                <h3 class="nav-tittle">INR <span class="special">Travels</span></h3>
+            </div>
+            <div class="nav-items">
+                <a href=""><span class="special">Home</span></a>
+                <a href="">Packages</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+            </div>
+            <img class="ham-img" src="/images/bars-solid (1).svg" alt="">
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
