destination section completed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,55 @@
         </nav>
     </header>
     <main>
+        <!-- Banner section starts here -->
+
+        <section class="banner">
+         <div class="container">
+            <h1 class="banner-tittle">Explore Your Travel</h1>
+            <p class="description">Embark on a journey of discovery with Explore Your Travel. Uncover new horizons, create lasting memories, and embrace diverse cultures. Your adventure awaits with every destination.</p>
+         </div>
+        <div class="input-containers">
+            <div>
+                <input class="inputs" type="text" placeholder="where go">
+            </div>
+            <div>
+                <select class="inputs">
+                    <option>When</option>
+                </select>
+            </div>
+            <div>
+                <select class="inputs">
+                    <option>Select Type</option>
+                </select>
+            </div>
+            <div>
+                <button class="primary-btn"><img src="/images/magnifying-glass-solid.svg" alt=""> Find Now</button>
+            </div>
+        </div>
+        </section>
+
+      <!-- Popular section starts here -->
+           
+      <section class="popular">
+        <div class="popular-details">
+            <h1 class="titlles">Our Popular Tours</h1>
+            <p class="description-tour">Immerse yourself in breathtaking landscapes and natural wonders with our Scenic Delights Expedition. Traverse picturesque routes that showcase the beauty of diverse terrains,</p>
+            <p class="description-tour">*from lush green valleys to towering mountain peaks. This tour promises an unforgettable journey filled with awe-inspiring views </p>
+            <p class="description-tour">*Embark on a Cultural Odyssey Experience that unveils the rich tapestry of traditions and heritage. Explore historic landmarks, engage with local communities, and savor authentic cuisine. This tour is designed to provide a deep understanding of the vibrant cultures that shape each destination.</p>
+            <p class="description-tour">*For the thrill-seekers, our Adventure Seeker's Paradise Trek offers an adrenaline-fueled expedition into the heart of nature's playground. Navigate challenging trails, conquer rugged terrains, and partake in exhilarating activities. Whether it's scaling peaks, conquering rapids.</p>
+            <h5 class="tour-end">Experience the wonders of the animal kingdom on our Wildlife Safari Expedition. Traverse through natural habitats and encounter majestic creatures in their native environments. Our expert guides will lead you on an adventure.</h5>
+            <button class="primary-btn">Read More</button>
+        </div>
+        <div class="popular-img">
+            <img src="/images/Rectangle 4.png" alt="">
+        </div>
+      </section>
+
+      <!-- Destination section starts -->
+      <Section class="destination">
+        <h1 class="tittles">Choose Your Destination</h1>
+        <p class="tour-end">Step into a world where traditions echo through time, and every street corner is a living testament to a rich heritage.</p>
+      </Section>
 
     </main>
     <footer>
