added choose us section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,34 @@
         <h1 class="tittles">Choose Your Destination</h1>
         <p class="tour-end">Step into a world where traditions echo through time, and every street corner is a living testament to a rich heritage.</p>
       </Section>
+     <section class="destination-img">
+        <div class="row">
+            <img class="resize1" src="/images/Rectangle 5.png" alt="">
+            <img class="resize2" src="/images/Rectangle 8 (1).png" alt="">
+        </div>
+        <div class="row">
+           <img src="/images/Rectangle 6.png" alt="">
+           <img src="/images/Rectangle 7.png" alt="">
+           <img src="/images/Rectangle 9.png" alt="">
+        </div>
+        <div class="row">
+            <img src="/images/Rectangle 11.png" alt="">
+            <img src="/images/Rectangle 10.png" alt="">
+        </div>
+     </section>
+
+     <!-- Why choose us -->
+    <section class="choose-us">
+        <h3 class="tittles">Why Choose Us</h3>
+        <p class="choose-descrip">With a team of seasoned professionals, we bring unparalleled expertise to the table. Our in-depth knowledge and years of experience ensure that every aspect of your journey </p>
+    </section>
+    <div class="choose-cards">
+        <div class="card1">
+            
+        </div>
+    </div>
+      
+
 
     </main>
     <footer>
