project done but few cusotimizaton left

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INR Travels</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="nav-container">
-                <img src="/images/Group 40071 (2).png" alt="">
+                <img src="./images/Group 40071 (2).png" alt="">
                 <h3 class="nav-tittle">INR <span class="special">Travels</span></h3>
             </div>
             <div class="nav-items">
@@ -20,7 +20,7 @@
                 <a href="">Blog</a>
                 <a href="">Contact</a>
             </div>
-            <img class="ham-img" src="/images/bars-solid (1).svg" alt="">
+            <img class="ham-img" src="./images/bars-solid (1).svg" alt="">
         </nav>
     </header>
     <main>
@@ -46,7 +46,7 @@
                 </select>
             </div>
             <div>
-                <button class="primary-btn"><img src="/images/magnifying-glass-solid.svg" alt=""> Find Now</button>
+                <button class="find"><img src="./images/magnifying-glass-solid.svg" alt=""> Find Now</button>
             </div>
         </div>
         </section>
@@ -64,7 +64,7 @@
             <button class="primary-btn">Read More</button>
         </div>
         <div class="popular-img">
-            <img src="/images/Rectangle 4.png" alt="">
+            <img src="./images/Rectangle 4.png" alt="">
         </div>
       </section>
 
@@ -75,44 +75,57 @@
       </Section>
      <section class="destination-img">
         <div class="row">
-            <img class="resize1" src="/images/Rectangle 5.png" alt="">
-            <img class="resize2" src="/images/Rectangle 8 (1).png" alt="">
+            <img class="resize1" src="./images/Rectangle 5.png" alt="">
+            <img class="resize2" src="./images/Rectangle 8 (1).png" alt="">
         </div>
         <div class="row">
-           <img src="/images/Rectangle 6.png" alt="">
-           <img src="/images/Rectangle 7.png" alt="">
-           <img src="/images/Rectangle 9.png" alt="">
+           <img src="./images/Rectangle 6.png" alt="">
+           <img src="./images/Rectangle 7.png" alt="">
+           <img src="./images/Rectangle 9.png" alt="">
         </div>
         <div class="row">
-            <img src="/images/Rectangle 11.png" alt="">
-            <img src="/images/Rectangle 10.png" alt="">
+            <img src="./images/Rectangle 11.png" alt="">
+            <img src="./images/Rectangle 10.png" alt="">
         </div>
      </section>
 
      <!-- Why choose us -->
     <section class="choose-us">
         <h3 class="tittles">Why Choose Us</h3>
-        <p class="choose-descrip">With a team of seasoned professionals, we bring unparalleled expertise to the table. Our in-depth knowledge and years of experience ensure that every aspect of your journey </p>
+        <p class="choose-description">With a team of seasoned professionals, we bring unparalleled expertise to the table. Our in-depth knowledge and years of experience ensure that every aspect of your journey </p>
     </section>
     <div class="choose-cards">
         <div class="card1">
-            <img src="/images/hotel 1.svg" alt="">
+            <img src="./images/hotel 1.svg" alt="">
             <h5 class="card-tittle">Handpicked Hotels</h5>
             <p>Discover a world of refined elegance and unmatched comfort with our handpicked selection of hotels. Discover a world of refined elegance and unmatched comfort with our handpicked selection of hotels. Each property is meticulously chosen to redefine your travel experience, offering a symphony of luxury, authenticity, and personalized service.</p>
         </div>
         <div class="card2">
-            <img src="/images/map 1.svg" alt="">
+            <img src="./images/map 1.svg" alt="">
             <h5 class="card-tittle">World Class Service</h5>
             <p>Step into a realm where service is an art, and every interaction is a testament to excellence. Our commitment to providing world-class service goes beyond meeting expectations; it's about crafting an unparalleled experience that lingers in your memory long after your journey concludes.</p>
         </div>
     </div>
     <div class="last-card">
         <div class="card3">
-            <img src="/images/price-tag 1.svg" alt="">
+            <img src="./images/price-tag 1.svg" alt="">
             <h5 class="card-tittle">Best Price Guarantee</h5>
             <p>When you choose us, you choose confidence in your decision. Our Best Price Guarantee is a testament to our commitment to offering you the most competitive rates available, ensuring that your journey is not only exceptional but also unbeatable in value.</p>
           </div>
     </div>
+
+    <section class="tour-guide">
+        <div class="guide-details">
+            <h2 class="guide-tiitle">Our guides</h2>
+        <p class="guides-description">Our guides are experienced and knowledgeable professionals who lead individuals or groups through various attractions, destinations, or cultural sites. Their primary role is to enhance the visitor's experience by providing informative and engaging commentary, historical context, and interesting facts about the places being explored.</p>
+        </div>
+        <div class="galary">
+         <img src="./images/guide1.jpg" alt="">
+         <img src="./images/guide2.jpg" alt="">
+         <img src="./images/guide3.jpg" alt="">
+         <img src="./images/guide4.jpg" alt="">
+        </div>
+    </section>
 
     <!-- Perfect place section starts here -->
 
@@ -120,24 +133,58 @@
        <div class="perfect-container">
         <div class="perfect-details">
             <h1 class="perfect-tittle">A Simple Perfect Place<br> To Get Lost</h1>
-            <p class="perfect-descrip"> is a captivating haven nestled within nature's embrace, inviting wanderers and dreamers alike to surrender to its enchanting allure.</p>
+            <p class="perfect-description"> is a captivating haven nestled within nature's embrace, inviting wanderers and dreamers alike to surrender to its enchanting allure.</p>
             <h5 class="perfect-sub">* Surrounded by lush landscapes, this idyllic sanctuary is a symphony of tranquility, where time seems to slow down, and the hustle and bustle of the outside world fades away.</h5>
-            <h5 class="perfect-sub">* Picture a hidden gem, concealed from the chaos of urban life, where rolling hills meet the whispering trees, creating a harmonious melody of rustling leaves and birdsong.</h5>
+            <h5 class="perfect-sub">* Picture a hidden gem, concealed from the chaos of urban life, where rolling hills meet whispering trees, creating a harmonious melody of rustling leaves and birdsong.</h5>
             <button class="primary-btn">See More</button>
         </div>
         <div class="perfect-video">
             <video width="560" height="415" controls>
-                <source src="/images/video (2160p).mp4" type="video/mp4">    
+                <source src="./images/video (2160p).mp4" type="video/mp4">    
             </video>
             <h4 class="video-tittle">Watch Our Mountain in<br> Bangladesh</h4>
         </div>
        </div>
+     </section>
 
+     <!-- Newsletter section starts from here -->
 
+     <section class="news-letter">
+        <div class="newsletter-container">
+            <div class="news-content">
+                <h4 class="news-tittle">Newsletter</h4>
+                <p class="news-description">Subscribe for our latest news related tours</p>
+                <hr>
+                <input type="text" placeholder="Enter your name">
+                <input type="email" placeholder="Enter your mail">
+                <button class="primary-btn subs">Subscribe</button>
+            </div>
+            <div class="news-img">
+                <img src="./images/Rectangle 8 (1).png" alt="">
+                <img class="dis-img" src="./images/Rectangle 14.png" alt="">
+            </div>
+        </div>
      </section>
    
     </main>
     <footer>
+        <Section class="footer-sec">
+            <div class="footer-details">
+                <img src="./images/Group 40071 (2).png" alt="">
+                <h3 class="nav-tittle">INR <span class="special">Travels</span></h3>
+            </div>
+            <div class="footer-resources">
+                <h4 class="footer-description">"INR Travels" likely represents a platform or service catering to international travel. This suggests a broader scope, encompassing destinations beyond a specific country. The website might provide information on global travel, international itineraries, visa assistance, or other services relevant to a global audience.
+                </h4>
+                <img src="/images/facebook.svg" alt="">
+                <img src="/images/instagram.svg" alt="">
+                <img src="/images/twitter.svg" alt="">
+                <img src="/images/github.svg" alt="">
+                <hr id="footer-gap">
+                <h6 class="footer-rights"> 2024, All Rights Reserved.</h6>
+            </div>
+            
+        </Section>
 
     </footer>
 </body>
