--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             <p class="description">Embark on a journey of discovery with Explore Your Travel. Uncover new horizons, create lasting memories, and embrace diverse cultures. Your adventure awaits with every destination.</p>
          </div>
         <div class="input-containers">
-            <div>
+            <div class="input-room">
                 <input class="inputs" type="text" placeholder="where go">
             </div>
-            <div>
+            <div class="input-room">
                 <select class="inputs">
                     <option>When</option>
                 </select>
             </div>
-            <div>
+            <div class="input-room">
                 <select class="inputs">
                     <option>Select Type</option>
                 </select>
             </div>
-            <div>
+            <div class="input-room">
                 <button class="find"><img src="./images/magnifying-glass-solid.svg" alt=""> Find Now</button>
             </div>
         </div>
